2004-06-18  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c (planner_gantt_print_do)
	(gantt_print_task): Fix bug #134552, print out percent complete.

2004-06-18 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-cmd.c: Fixed bad string

	* src/planner-calendar-dialog.c: Added undo for calendar day type

2004-06-17  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c: (planner_gantt_print_do): Handle
	cases where page start equals task finish, can happen with
	milestone tasks for example. Also add a workaround to fix a crash
	(bug #135473) when the scheduler has screwed up, for 0.12.

2004-06-17  Richard Hult  <richard@imendio.com>

	* src/planner-application.c:
	* src/planner-gantt-chart.c:
	* src/planner-gantt-view.c:
	* src/planner-print-dialog.c:
	* src/planner-task-tree.c:
	* src/planner-task-view.c:
	* src/planner-window.c: Simplify gconf code and add keys for
	critical path highlighting.

2004-06-17  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c (gantt_row_notify_cb): Only redraw if
	critical changed, don't update arrow positions.

	* src/planner-gantt-model.c: Improve the caching scheme (AKA make
	it work).

2004-06-17  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c (task_manager_do_backward_pass):
	Don't set critical if it hasn't changed.

2004-06-17  Richard Hult,,,  <richard@imendio.com>

	* src/planner-gantt-model.c: (gantt_model_task_inserted_cb),
	(traverse_remove_subtree), (gantt_model_remove_subtree),
	(gantt_model_task_removed_cb), (gantt_model_reattach_subtasks),
	(gantt_model_task_moved_cb), (gantt_model_task_notify_cb),
	(traverse_insert_task_into_hash), (planner_gantt_model_new),
	(gantt_model_get_iter), (gantt_model_get_value), (dump_children),
	(value_cache_get_wbs), (value_cache_free), (value_cache_get),
	(value_cache_clear), (value_cache_set_wbs):
	* src/planner-task-tree.c: (task_tree_name_data_func),